# minitalk

./: .gitignore  CMakeLists.txt  Makefile
include/: minitalk.h
lib/ft/: Makefile  libft.h
lib/ft/std/: ft_itoa.c
lib/ft/string/: Makefile.mk  ft_str1.c
src/client/: client.c  client.h
src/server/: server.c
